# quizer

./: .gitignore  LICENSE  docker-compose.yml  justfile  pyproject.toml
migrations/: 20251008174848_initial.sql  Dockerfile
src/quizer/: __init__.py  bot_setup.py  config.py  logger.py  main.py
src/quizer/adapters/: database.py
src/quizer/adapters/repositories/: answer.py  question.py  survey.py  user.py
src/quizer/adapters/repositories/fake/: question.py  survey.py  user.py
src/quizer/adapters/repositories/postgres/: answer.py  question.py  survey.py  user.py
src/quizer/application/: exceptions.py
src/quizer/application/dto/: answer.py  question.py  survey.py  user.py
src/quizer/application/dto/mappers/: question.py  survey.py  user.py
src/quizer/application/factories/: survey.py  user.py
src/quizer/application/interactors/question/: add_question.py  answer_question.py  get_survey_questions.py  update_question.py
src/quizer/application/interactors/survey/: answer_question.py  create_survey.py  (+5 more)
src/quizer/entities/: exceptions.py  survey.py  user.py
src/quizer/presentation/: ioc.py
src/quizer/presentation/bot/: id_provider.py  middlewares.py  simple.py
tests/: conftest.py  factories.py  provider.py  test_survey.py  test_user.py
tests/question/: test_answer_question.py  test_get_questions.py
tests/survey/: test_create_survery.py  test_delete_survey.py  test_get_surveys.py  test_survey_report.py  test_update_survey.py
tests/user/: test_create_survery.py  test_get_user.py  test_get_user_surveys.py  test_register.py  test_update_user.py
(+17 files in other folders)
