[project]
name = "quizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AliakseiYafremau", email = "aleksey.yafremau@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
quizer = "quizer:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
